# linkedin-ai

./: .pylintrc  README.md  debug.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pylint.yml
src/: app.py  jobai.py  jobdb.py  liautomator.py  models.py
src/core/: __init__.py  aimanager.py  souperscraper.py  sqldantic.py
src/linkedin_ai/: app.py  jobai.py  jobdb.py  liautomator.py  models.py
src/linkedin_ai/core/: aimanager.py  sqldantic.py
src/linkedin_ai/widgets/: __init__.py  checkablecombobox.py  dynamicsignalqobject.py  fileselectwidget.py  logindialog.py  modeltablewidget.py  questiondialog.py  settingswidget.py
src/widgets/: __init__.py  checkablecombobox.py  comboboxwithupdatebuttons.py  coverletterwidget.py  dynamicsignalqobject.py  fileselectwidget.py  jobappdbwidgets.py  logindialog.py  modeltablewidget.py  questiondialog.py  searchapplywidget.py  settingswidget.py
