[build-system]
requires = ["setuptools", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Lucas Faudman", email = "lucasfaudman@gmail.com"}]
dynamic = ["classifiers"]
name = "linkedin-ai"
version = "0.6.5"
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE" }
description = "Automate searching for jobs and submitting applications on LinkedIn using OpenAI"
keywords = [
"linkedin", "openai", "automation", "job", "applications", "ai", "linkedin-ai", "linkedin scraper",
"linkedin job applications", "linkedin automation", "selenium", "bs4", "PyQt5", "gui"
]
dependencies = [
    'souperscraper',
    'openai',
    'tiktoken',
    'pydantic',
    'python-docx',
    'pyqt5'
]

[project.urls]
Homepage = "https://github.com/LucasFaudman/linkedin-ai.git"
Repository = "https://github.com/LucasFaudman/linkedin-ai.git"

[project.scripts]
linkedin-ai = "linkedin_ai.app:main"

[tool.setuptools]

[tool.setuptools_scm]
version_file = "src/linkedin_ai/_version.py"

[tool.black]
line-length = 120
